--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="couples_project">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
